# python-project-52

./: .envExample  .gitignore  Makefile  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: task-manager.yml
locale/ru/LC_MESSAGES/: django.po
task_manager/: __init__.py  settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/en/LC_MESSAGES/: django.po
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: base.html  create.html  delete.html  footer.html  form.html  head.html  index.html  login.html  nav.html  nav_panel.html  update.html
task_manager/templates/labels/: labels.html
task_manager/templates/statuses/: statuses.html
task_manager/templates/tasks/: read.html  tasks.html
task_manager/templates/users/: users.html
task_manager/tests/: test_labels.py  tests.py  tests_statuses.py  tests_tasks.py  tests_users.py
task_manager/users/: views.py
task_manager/users/migrations/: 0001_initial.py
