[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["AnastasiaTimoshe <a.n.timoshevskaya@gmail.com>"]
readme = "README.md"
packages = [
    { include = "task_manager" },
    ]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
